diesel_compile_tests/tests/fail/ensures_derive_queryable_by_name_valid_type.rs
extern crate diesel;

use diesel::*;
use diesel::sql_types::*;

#[derive(QueryableByName)]
struct User {
    #[sql_type = "BigInt"]
	id: i32,
}

fn main() {
}
